# OtusRustHomework

FinalWork/pyramid_of_chaos/: Cargo.toml
FinalWork/pyramid_of_chaos/client/: Cargo.toml
FinalWork/pyramid_of_chaos/client/art/: art.blend  art.blend1
FinalWork/pyramid_of_chaos/client/assets/models/: brick.glb  worker.glb
FinalWork/pyramid_of_chaos/client/src/: destroy_after_time.rs  fire.rs  freeze.rs  health.rs  lib.rs  main.rs  min_max.rs  movement_input.rs
FinalWork/pyramid_of_chaos/client/src/core/: game_default.rs  input.rs  mod.rs
FinalWork/pyramid_of_chaos/client/src/core/effects/: mod.rs  stun.rs
FinalWork/pyramid_of_chaos/client/src/worker_ai/: get_bricks_from_quarry.rs  mod.rs  movement.rs
FinalWork/pyramid_of_chaos/client/src/worker_entity/: cargo_bundle.rs  cargo_view_processor_impl.rs  mod.rs  worker_bundle.rs
dz4_OwnerShipAndBorrowingArc/: Cargo.toml  README.md
dz4_OwnerShipAndBorrowingArc/src/: main.rs
hw_ex12/: README.md
hw_ex12/src/: lib.rs  main.rs  reporter.rs
hw_ex15/: README.md
hw_ex15/src/: device.rs  lib.rs  main.rs
hw_ex15/tests/: hello_integration_test.rs
hw_ex18/: Cargo.toml  README.md
hw_ex18/my_stp/: Cargo.toml
hw_ex18/smart_house_client/: Cargo.toml
hw_ex18/smart_house_server/: Cargo.toml
hw_ex20/: Cargo.toml  README.md
hw_ex25/: Cargo.toml  README.md
hw_ex25/my_stp_async/: Cargo.toml
hw_ex25/smart_house/: Cargo.toml
hw_ex25/smart_house_cli/: Cargo.toml
hw_ex25/smart_house_cli_async/: Cargo.toml
hw_ex25/smart_house_client/: Cargo.toml
hw_ex25/smart_house_server/: Cargo.toml
hw_ex25/smart_house_server_async/: Cargo.toml
hw_ex28/: README.md
hw_ex28/src/: lib.rs
hw_ex30/: README.md
hw_ex30/my_stp/: Cargo.toml
hw_ex30/my_stp_async/: Cargo.toml
hw_ex32/: Cargo.toml  README.md
hw_ex35/: Cargo.toml  README.md  request.txt
hw_ex35/infrastructure/: Cargo.toml
hw_ex35/infrastructure/src/: main.rs  route.rs
hw_ex35/infrastructure/src/repository/: in_memory.rs
hw_ex35/infrastructure/src/route/handler/: create_device_in_room.rs  create_room_in_house.rs  delete_device_in_room.rs  delete_room_in_house.rs  get_report_from_devices.rs  mod.rs  read_all_devices_in_room.rs  read_all_houses.rs  read_all_rooms_in_house.rs
hw_ex40/: Cargo.toml
hw_ex9/: README.md
hw_ex_28/: Cargo.toml
(+88 files in other folders)
