[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
application = {"path" = "../application"}
domain = {"path" = "../domain"}
axum = "0.8"
thiserror = "2.0"
tokio = { version = "1.34.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
log = "0.4"