[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    # Core
    "bevy_core_pipeline",
    "multi_threaded",
    "bevy_winit",
    "bevy_text",
    "bevy_pbr",
    "bevy_window",
    "default_font",
    "bevy_render",
    "bevy_asset",
    "bevy_color",
    "bevy_ui",
    "png",
    "bevy_state",

    # Core formats
    "png",

    # VFX
    "tonemapping_luts",
]}

rand = "0.9"
big-brain = "0.22"
big-brain-derive = "0.22"
leafwing-input-manager = "=0.16"
avian3d = "0.2"

# Platform specific
[target.'cfg(unix)'.dependencies]
  bevy = { version = "0.15", default-features = false, features = ["x11", "wayland"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"
strip = true  # Automatically strip symbols from the binary
opt-level = "z"
panic = "abort"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
